Forgot full stop.

--- a/main.tex
+++ b/main.tex
@@ -193,7 +193,7 @@ with respect to the position of the atom they applied to.
 This previous work should therefore be regarded as a proof-of-concept.
 In this new version, we include more physical meaning in our model, 
 by placing pseudo-potentials that mimic Coulomb interactions among both the active and dormant electrons, and the shielded nuclear charge. 
-The new pseudo-potentials are fully atomic: when replacing a hybridised atom, the atom's position and orientation can determine completely the placement of the potentials. (as hybridisation destroys isotropy, the preferred orientations
+The new pseudo-potentials are fully atomic: when replacing a hybridised atom, the atom's position and orientation can determine completely the placement of the potentials (as hybridisation destroys isotropy, the preferred orientations
 must be given to define the pseudo-potential).
 
 This article is structured as follows.
