--- a/main.tex
+++ b/main.tex
@@ -269,7 +269,7 @@ a hydrogen-like "pseudo-carbon", with a nuclear charge of \(Z_{nucleus} = 1\), a
 There are now no H atoms, and the system is surrounded by three potential pairs at a planar distance of \(d\), each consisting of 
 two \(s\)-shaped potentials with a distance of \(c\) above and below the \((xy)\) plane. 
 A further \(p\)-shaped potential is applied directly to the pseudo-carbon.
-Based on Equation~\ref{eq:ourPP}, the complete pseudo-potential reads as:
+Based on Equation~\ref{eq:ourPP_init}, the complete pseudo-potential reads as:
 
 \begin{align}
 \label{eq:ourPP}
@@ -388,8 +388,7 @@ the parameters for the $s$ potentials surrounding the nucleus.
 To do so, we decide to focus on the reproduction of the energy of the singly
 occupied HOMO of this system
 at the HF/def-SV(P) level. The energy of this orbital is $-10.537\;eV$.
-This value can be reproduced exactly with a coefficient of $-7.524\;a.u.$
-and an exponent of $10.0$.
+This value can be exactly reproduced with a range of exponents and coefficients for the $s$ potentials. For example, by choosing an exponent of 1.0 we get a coefficient of $2.77\;a.u.$ which gives the correct HOMO value.
 
 \subsection{Extraction in the general case for C sp$^2$ atoms}
 \label{section:csp2_extraction}
@@ -397,9 +396,8 @@ The CH$_3^\bullet$ radical allowed us to test our model but cannot be used
 as such when dealing with $\pi$ molecular interactions as it does not contain
 information about the $\pi$ bond.
 As discussed earlier, the exponent extracted for CH$_3^\bullet$ is too diffuse
-and the $p$ pseudo-potential interacts with neighbouring atoms.
-Thus, a reparametrisation is necessary with previous parameters used as a reliable
-and physically sound values.
+and the $p$ pseudo-potential interacts with neighbouring atoms. As we will see below, the tuning of the potentials to reflect other properties of the system will also require the potentials to affect other orbitals of the pseudo-carbon (the $\pi^{*}$ orbital, for example).
+Thus, a reparametrisation is necessary with previous parameters used as a starting guess for optimisation.
 This explains the difference between the parameters obtained in the previous
 section and the ones of Table~\ref{tab:params}.
 As can be seen, the optimal exponent is found to be $0.624$ (it was $0.261$ for
@@ -410,10 +408,12 @@ We intend to extract a pseudo-potential, which interacts properly with
 other $\pi$-carrying atoms, be they pseudo-systems or real systems.
 Furthermore, we expect our hypothesis to be grounded and to be able to
 extract parameters on as few data as possible.
-Thus, we extracted the optimal pseudo-potential by a step by step procedure described in 
-the supplementary materials on the smallest $\pi$ system: the ethylene molecule.
+We extracted the optimal pseudo-potential by a step-by-step procedure on the smallest $\pi$ system: the ethene molecule.
 Formally, the pseudo-potential has the same shape as in Equation~\ref{eq:ourPP}.
-The position of the $s$ potential is kept the same (Table~\ref{tab:pos}). 
+The position of the $s$ potential is kept the same (Table~\ref{tab:pos}).
+We began by optimising sets of potentials from different starting guesses to obtain the exact $\Delta_{ST}$ gap (the $\Delta_{ST}$ value is the difference
+between the lowest $\pi^*$ triplet, ground state in the triplet space, and the lowest singlet state, the ground state). We then picked the potential set that also gave the best HOMO and ionisation energies, and used this potential as the starting guess for a final optimisation aimed at minimising the total error across all three values.
+See the supplementary materials for further details.
 Values for the optimised parameters are reported in Table~\ref{tab:params}.
 
 \begin{table}[ht]
@@ -434,17 +434,17 @@ $s$  & $A'=1.5$   & $\alpha'=0.5$   \\
 \end{table}
 
 With parameters defined in Table \ref{tab:params}, the potential reproduces the properties
-of the ethylene $\pi$ cloud system with a good accuracy: relative errors on the ionisation
+of the ethene $\pi$ cloud system with a good accuracy: relative errors on the ionisation
 energy and the energies of the HOMO orbital of 8\% and 3\% respectively (Table \ref{tab:res_ourPP}).
 
 \begin{table}[ht]
 \caption{\label{tab:res_ourPP}Comparison of the
 singlet-triplet splitting ($\Delta_{ST}$), ionisation
 energy (I.E.) and energy of the HOMO orbital ($\varepsilon_{HOMO}$)
-of the reference ethylene molecule
+of the reference ethene molecule
 and its reproduction with the optimal pseudo potential obtained in this work.
 The $\Delta_{ST}$ values are the difference
-between the lowest $\pi*$ triplet (in an unrestricted formalism) and the lowest singlet state
+between the lowest $\pi^*$ triplet (in an unrestricted formalism) and the lowest singlet state
 (in a restricted formalism).
 Calculations are performed at the HF/def-SV(P) level, values are in eV.}
 \begin{tabular}{llll}
@@ -464,14 +464,12 @@ The extraction done in the previous section was at the HF/def-SV(P) level.
 We intend to show that there is no need for reparametrisation of the potential
 when used with other methods.
 Thus, in the following sections, we use HF and four functionals in the DFT framework:
-one GGA (PBE), one meta-GGA (TPSS) and their hybrid variants (PBE0 and TPSSh).
-Furthermore, the parametrisation was done with ground state calculations only:
-the $\Delta_{ST}$ values are simply the difference between the lowest singlet (ground state)
-and the lowest $\pi*$ triplet (ground state in the triplet space).
+one GGA (PBE), one meta-GGA (TPSS) and their hybrid variants (PBE0 and TPSSh). As a measure of the success of the potentials extracted we examine the three properties $\Delta_{ST}$, the ionisation energy, and the ground state HOMO energy across a series of molecules other than ethene. Furthermore, the parametrisation is done with ground state calculations only:
+the $\Delta_{ST}$ values are simply the difference between the  lowest $\pi^*$ triplet (ground state in the triplet space) and the lowest singlet (ground state).
 We then go on to use this potential in the TD-DFT framework, which uses the virtual orbitals.
 We show in the last section that results obtained within the TD-DFT framework
 match the reference calculations from both the quantitative (excitation energies match)
-and qualitative (excitations are described by the same orbitals) point of view.
+and qualitative (excitations are described by the same orbitals) point of view. 
 Finally, despite the fact that the extraction was done on a non-aromatic system,
 we perform calculations on fused ring aromatic systems.
 Again, these calculations are successful.
@@ -496,8 +494,10 @@ this method to outperform the others.
 It is not found to be true.
 It turns out that PBE0 performs better on average than any other method used in this work.
 Thus, in the following sections, we shall illustrate our discussion using the PBE0 results.
-The mean absolute errors for the other methods are given as a reference.
+The mean absolute errors for the other methods are given.
 The complete set of results is in the supplementary material.
+Additionally, the potential extracted on ethene gave an exact $\Delta_{ST}$ result, but had errors of 3\% and 8\% on the HOMO and ionisation energies respectively, thus we expect errors of at least a similar size in other systems in which they are used. Furthermore, ionisation energies are difficult to reproduce
+owing to the fact that the atomic charges of the pseudo-atoms are drastically modified.
 
 \subsection{Alkene chains: C\(\mathbf{_{2n}}\)H\(\mathbf{_{2n+2}}\), \(\mathbf{2 \leq n \leq 6}\)}
 
@@ -521,11 +521,11 @@ with the energies following the same gradient.
 \end{center}
 \caption{Comparison of the HOMO ($\varepsilon_{HOMO}$),
 the ionisation (I.E.), and
-the first singlet-triplet $\pi-\pi*$ excitation ($\Delta_{ST}$ and TD-DFT) energies
+the first singlet-triplet $\pi-\pi^*$ excitation ($\Delta_{ST}$ and TD-DFT) energies
 between the
 all-electron reference and optimal pseudo-potential systems across a range of chain alkenes.
 The $\Delta_{ST}$ values are the difference
-between the lowest $\pi*$ triplet (unrestricted formalism) and the lowest singlet state
+between the lowest $\pi^*$ triplet (unrestricted formalism) and the lowest singlet state
 (restricted formalism).
 Calculations are at the PBE0/def-SV(P) level.}
 \label{fig:alkenes_pbe0_dft}
@@ -542,7 +542,7 @@ The basis set is def-SV(P).}
 $\varepsilon_{HOMO}$    & 1.3 & 4.0 & 8.5 & 12.0 &  9.7 \\
 I.E.                    & 5.3 & 6.0 & 8.1 & 10.1 &  9.0 \\
 $\Delta_{ST}$           & 4.1 & 3.6 & 7.5 & 13.3 & 11.4 \\
-TD-DFT $\pi-\pi*$       & 11.6 & 2.6 & 2.8 &  6.3 &  6.9 \\ 
+TD-DFT $\pi-\pi^*$       & 11.6 & 2.6 & 2.8 &  6.3 &  6.9 \\ 
 \hline\hline
 \end{tabular}
 \label{table:alkene_errors}
@@ -554,14 +554,13 @@ which match to within 3\% (see supplementary materials).\cite{drujon_pseudopoten
 
 Here we discuss in more detail the results obtained with the PBE0 functional presented
 in Figure~\ref{fig:alkenes_pbe0_dft}.
-The properties computed with the optimal pseudo-potential are in very good
-agreement with the reference values.
-The HOMO energy and the ionisation potential are quantities very difficult to reproduce
-owing the fact that the atomic charges of the pseudo-atoms were drastically modified.
-However, the agreement between pseudo and reference calculations is satisfactory
+The properties computed with the optimal pseudo-potential are in very close agreement with the reference values.
+%The HOMO energy and the ionisation energy are quantities very difficult to reproduce
+%owing to the fact that the atomic charges of the pseudo-atoms were drastically modified.
+Even for HOMO and ionisation energies, the agreement between pseudo and reference calculations is satisfactory
 (average error $\le 6\%$).
 Thus, the addition or withdrawal of an electron from the pseudo-molecule is well reproduced.
-Furthermore, the first singlet-triplet $\pi-\pi*$ excitations agree very well in either
+Furthermore, the first singlet-triplet $\pi-\pi^*$ excitations agree very well in either
 the $\Delta_{ST}$ or TD-DFT framework (average error $\le 3.6\%$).
 
 \subsection{Fused rings and larger chains}
@@ -575,11 +574,11 @@ the $\Delta_{ST}$ or TD-DFT framework (average error $\le 3.6\%$).
 \end{center}
 \caption{Comparison of the HOMO ($\varepsilon_{HOMO}$),
 the ionisation (I.E.),
-the first singlet-triplet $\pi-\pi*$ excitation ($\Delta_{ST}$ and TD-DFT) energies
+the first singlet-triplet $\pi-\pi^*$ excitation ($\Delta_{ST}$ and TD-DFT) energies
 between the
 all electron reference system and the optimal pseudo-potential across a range of ring molecules.
 The $\Delta_{ST}$ values are the difference
-between the lowest $\pi*$ triplet (unrestricted formalism) and the lowest singlet state
+between the lowest $\pi^*$ triplet (unrestricted formalism) and the lowest singlet state
 (restricted formalism).
 Calculations are at the PBE0/def-SV(P) level.
 The C\(_{54}\)H\(_{18}\) molecule is represented in Figure \ref{fig:c54h18}.}
@@ -595,22 +594,15 @@ The C\(_{54}\)H\(_{18}\) molecule is represented in Figure \ref{fig:c54h18}.}
 
 The potentials derived above are also tested on larger systems.
 Figure \ref{fig:rings_graphs} shows the $\Delta_{ST}$, the IE and
-HOMO energy values for several ring systems.
+HOMO energy values for several ring systems, the largest of which is C$_{54}$H$_{18}$, shown in Figure~\ref{fig:c54h18}.
 As with the short chain alkenes, the general trend of the results is well-replicated
 by the pseudo-systems, and the percentage errors, displayed in Table
-\ref{table:ring_system_errors}, are similar.
-
-The properties computed with the optimal pseudo-potential are in very good
-agreement with the reference values.
-Here one can see that the HOMO energy and the ionisation potential
-are more difficult properties to reproduce than excitation energies.
-To take the PBE0 example, mean average errors raise up to $10\%$ for them
-whereas they stay below $3.6\%$ for excitation energies independently of the way they are computed
-($\Delta_{ST}$ or TD-DFT).
-In the case of ionisation, the loss of aromaticity due to the variation of the number of
-electrons leads to larger discrepancies.
+\ref{table:ring_system_errors}, are similar. For PBE0, Figure~\ref{fig:rings_graphs}, mean average errors are below 3.6\% for excitation energies, independently of the way they are computed
+($\Delta_{ST}$ or TD-DFT). For HOMO and ionisation energies, average errors are somewhat larger, up to 10\%. 
+%In the case of ionisation, the loss of aromaticity due to the %variation of the number of
+%electrons leads to larger discrepancies.
 Yet, the agreement between reference and pseudo-potential calculations is very good.
-The modeling through our pseudo-potential does not suffer from error accumulation: Pseudo-system, whether of 2 or 54 pseudo-atoms, lead to similar errors on the computed properties.
+The modeling through our pseudo-potential does not suffer from error accumulation: different pseudo-systems, whether of 2 or 54 pseudo-atoms, lead to similar errors on the computed properties.
 
 \begin{table}[ht]
 \caption{Mean relative errors (in percent) across methods (HF or different functionals)
@@ -623,7 +615,7 @@ The basis set is def-SV(P).}
 $\varepsilon_{HOMO}$    & 3.4 &  9.3  & 13.4 & 17.1 & 14.7 \\
 I.E.                    & 7.4 & 10.0  & 12.5 & 14.4 & 13.0 \\
 $\Delta_{ST}$           & 3.3 &  1.9  &  1.7 &  6.8 &  6.7 \\
-TD-DFT $\pi-\pi*$       & 13.5 &  3.6  &  2.7 &  6.3 &  7.0 \\ 
+TD-DFT $\pi-\pi^*$       & 13.5 &  3.6  &  2.7 &  6.3 &  7.0 \\ 
 \hline\hline
 \end{tabular}
 \label{table:ring_system_errors}
@@ -643,7 +635,7 @@ the first singlet-triplet $\pi-\pi*$ excitation ($\Delta_{ST}$ and TD-DFT) energ
 between the
 all electron reference system and the optimal pseudo-potential across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).
 The $\Delta_{ST}$ values are the difference
-between the lowest $\pi*$  triplet (unrestricted formalism) and the lowest singlet state
+between the lowest $\pi^*$  triplet (unrestricted formalism) and the lowest singlet state
 (restricted formalism).
 Calculations are at the PBE0/def-SV(P) level.}
 \label{fig:long_chain_graphs}
@@ -660,7 +652,7 @@ The basis set is def-SV(P).}
 $\varepsilon_{HOMO}$    &  1.8 &  7.3   &  11.3   &  16.7    &  13.6 \\
 I.E.                    & 25.1 &  6.7   &   9.4   &  10.3    &  11.6 \\
 $\Delta_{ST}$           & 55.3 & 85.8   &  83.4   & 239.8    & 320.2 \\
-TD-DFT $\pi-\pi*$       & 30.1 &  1.0   &   6.1   &   5.6    &   2.9 \\ 
+TD-DFT $\pi-\pi^*$       & 30.1 &  1.0   &   6.1   &   5.6    &   2.9 \\ 
 \hline\hline
 \end{tabular}
 \label{table:long_alkene_errors}
@@ -668,14 +660,14 @@ TD-DFT $\pi-\pi*$       & 30.1 &  1.0   &   6.1   &   5.6    &   2.9 \\
 
 Figure~\ref{fig:long_chain_graphs} and Table \ref{table:long_alkene_errors} refer to longer 
 alkene chains (\(n\) up to 100).
-The pattern of decreasing ionisation potentials and $\Delta_{ST}$ with increasing HOMO
+The pattern of decreasing ionisation energies and $\Delta_{ST}$ with increasing HOMO
 energy is still followed, with the absolute error remaining consistent.
 However, differences in the triplet-singlet energies between the reference and pseudo-systems 
 become significant, notably for the largest case.
 Here again, ionisation energy and $\epsilon_{HOMO}$ agree with mean average errors lower than
 $10\%$ for PBE0.
 
-Unlike for the previous systems, the larger the system, the larger becomes the discrepancy between $\Delta_{ST}$
+Unlike for the previous systems, the larger the system, the larger the discrepancy between $\Delta_{ST}$
 and TD-DFT results.
 This apparent failure of the pseudo-potentials is to be found in the representation
 of the triplet state.
@@ -694,7 +686,7 @@ as can be seen from the excellent agreement obtained with TD-DFT.\cite{tammdanco
 \includegraphics[width=8cm]{long_pbe0_s2}
 \end{center}
 \caption{Comparison of $S^2$ expectation values obtained for the calculation
-of the first $\pi*$ triplet configuration in a SCF formalism, for reference
+of the first $\pi^*$ triplet configuration in a SCF formalism, for reference
 and pseudo-systems.}
 \label{fig:ssquare}
 \end{figure}
@@ -787,13 +779,13 @@ cannot alone describe the relationship between them.
 
 Having successfully created a pseudo-ethene with the correct HOMO, we attempt to have the pseudo-system replicate other properties of the real system:
 the singlet-triplet excitation energy ($\Delta_{ST}$) in the SCF framework (energy difference between the triplet and the singlet mono-reference
-calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\varepsilon_{HOMO}$). Reference values for the singlet-triplet \(\pi-\pi*\) excitation and first ionisation energies of ethene are given in Table \ref{tab:res_ourPP}. Testing the relevant energies for the optimised pseudo-systems above, we found that the early results were not promising. However, after we abandon the notion of sticking strictly to a \(p_{z}\)-potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" of potential coefficients and exponents around which the correct values begin to emerge. Tables \ref{tab:params} and  \ref{tab:res_ourPP} show our optimal result, chosen to give HOMO, ($\Delta_{ST}$) and ionisation energies closest to the reference values. 
+calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\varepsilon_{HOMO}$). Reference values for the singlet-triplet \(\pi-\pi^{*}\) excitation and first ionisation energies of ethene are given in Table \ref{tab:res_ourPP}. Testing the relevant energies for the optimised pseudo-systems above, we found that the early results were not promising. However, after we abandon the notion of sticking strictly to a \(p_{z}\)-potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" of potential coefficients and exponents around which the correct values begin to emerge. Tables \ref{tab:params} and  \ref{tab:res_ourPP} show our optimal result, chosen to give HOMO, ($\Delta_{ST}$) and ionisation energies closest to the reference values. 
 
 \subsubsection{Optimisation}
 
 In earlier calculations with only \(s\)-potentials, optimisation was performed by choosing a range of exponent values and attempting to optimise the coefficient at each to produce the HOMO reference energy. Once the \(p_{z}\) potential was added, the \(s\)-potentials were optimised afterward. 
 
-Once we started to look at excitation and ionisation energies however, optimisation became more complicated. Optimisations were at first performed of the s and p-potentials to reach the HOMO energy of ethene as before. With the different potential variables available, we produced a range of optimised potential sets. The best set of these potentials was then chosen and the values altered by hand in order to match as closely as possible three separate reference values: the singlet HOMO energy, the singlet-triplet \(\pi-\pi*\) excitation energy, and the cation-singlet energy. All optimisations used the Brent method in SciPy's optimisation library, with a tolerance of \(1.48*10^{-08}\), and used standard Hartree-Fock calculations.\cite{scipy}
+Once we started to look at excitation and ionisation energies however, optimisation became more complicated. Optimisations were at first performed of the s and p-potentials to reach the HOMO energy of ethene as before. With the different potential variables available, we produced a range of optimised potential sets. The best set of these potentials was then chosen and the values altered by hand in order to match as closely as possible three separate reference values: the singlet HOMO energy, the singlet-triplet \(\pi-\pi^{*}\) excitation energy, and the cation-singlet energy. All optimisations used the Brent method in SciPy's optimisation library, with a tolerance of \(1.48*10^{-08}\), and used standard Hartree-Fock calculations.\cite{scipy}
 
 \subsection{Comparison with our previous study}
 \begin{figure}
