--- a/main.tex
+++ b/main.tex
@@ -412,8 +412,8 @@ Formally, the pseudo-potential has the same shape as in Equation~\ref{eq:ourPP}.
 The position of the $s$ potential is kept the same (Table~\ref{tab:pos}).
 We began by optimising sets of potentials from different starting guesses to obtain the exact $\Delta_{ST}$ gap (the $\Delta_{ST}$ value is the difference
 between the lowest $\pi^*$ triplet, ground state in the triplet space, and the lowest singlet state, the ground state). We then picked the potential set that also gave the best HOMO and ionisation energies, and used this potential as the starting guess for a final optimisation aimed at minimising the total error across all three values.
+Values for the optimised parameters are reported in Table~\ref{tab:params}. Ultimately, the optimal potential found maintained a very accurate $\Delta_{ST}$.
 See the supplementary materials for further details.
-Values for the optimised parameters are reported in Table~\ref{tab:params}.
 
 \begin{table}[ht]
 \caption{\label{tab:params}Optimal parameters obtained for the pseudo 
@@ -458,6 +458,17 @@ Optimal pseudo-potential & 3.533 & 9.806 & -10.062 \\
 
 \section{Results and discussion}
 
+\subsection{Computational Details}
+All Hartree-Fock (HF), Density Functional Theory (DFT) and Time-Dependent DFT (TD-DFT) calculations
+are performed with TURBOMOLE 7.1 \cite{TURBOMOLE}.
+The basis set used throughout is def-SV(P) \cite{defsvp}.
+Wherever possible, planar (C\(_{S}\)) symmetry is used.
+The convergence energy is \(10^{-7}\)H (\texttt{\$scfconv = 7}) for SCF and \(10^{-6}\)H for DFT.
+%%PN
+%When running these calculations the occupation of orbitals is specified manually in the TURBOMOLE control file.
+
+\textbf{Chain Alkenes, Ring Molecules}. In addition to Hartree-Fock calculations, DFT is used with PBE0, PBE, TPSS and TPSSh functionals. \cite{pbe0,pbe,tpss,tpssh} The multiple m4 grid is used for integration. Also performed are TD-DFT calculations, where the Tamm-Dancoff approximation (CIS) \cite{tammdancoff} is switched on to avoid triplet instability.
+
 \subsection{Preliminary note}
 The extraction done in the previous section was at the HF/def-SV(P) level.
 We intend to show that there is no need for reparametrisation of the potential
@@ -475,19 +486,7 @@ Again, these calculations are successful.
 As a consequence, one can say that the potential extracted on ethene at the HF/def-SV(P)
 level is free of obvious transferability problems.
 
-\subsection{Computational Details}
-All Hartree-Fock (HF), Density Functional Theory (DFT) and Time-Dependent DFT (TD-DFT) calculations
-are performed with TURBOMOLE 7.1 \cite{TURBOMOLE}.
-The basis set used throughout is def-SV(P) \cite{defsvp}.
-Wherever possible, planar (C\(_{S}\)) symmetry is used.
-The convergence energy is \(10^{-7}\)H (\texttt{\$scfconv = 7}) for SCF and \(10^{-6}\)H for DFT.
-%%PN
-%When running these calculations the occupation of orbitals is specified manually in the TURBOMOLE control file.
-
-\textbf{Chain Alkenes, Ring Molecules}. In addition to Hartree-Fock calculations, DFT is used with PBE0, PBE, TPSS and TPSSh functionals. \cite{pbe0,pbe,tpss,tpssh} The multiple m4 grid is used for integration. Also performed are TD-DFT calculations, where the Tamm-Dancoff approximation (CIS) \cite{tammdancoff} is switched on to avoid triplet instability.
-
-\subsection{General discussion about the performance of the chosen functionals}
-As mentioned in the previous section, in addition to HF, four functionals were used.
+As mentioned above, in addition to HF, four functionals were used.
 As HF was the method used to extract the parameters of the pseudo-potential, one could expect
 this method to outperform the others.
 It is not found to be true.
@@ -741,167 +740,19 @@ in order to provide a library of such potentials.
 
 \section{Acknowledgments}
 The authors acknowledge the french Minist\`ere de l'\'education
-nationale et de la recherche for providing the PhD grant of A. Punter.
+nationale et de la recherche for providing the PhD grant of A. Punter. The authors thank Prof St\'ephane Humbel and Dr Denis Hagebaum-Reignier for fruitful discussion.
 
 \section{Supplementary materials}
 In the supplementary materials are provided:
 \begin{itemize}
-\item a spreadsheet file with all the calculated energies;
-\item all the geometries used for the calculations;
-\item a discussion of the timings of pseudo-potential sytems vs. reference
-calculations;
-\item the process of trial and error used to extract suitable parameters for
-the optimal pseudo-potential.
+\item a file containing discussions of the optimisation process used to generate the potentials, as well as of the computational gains found using the potential systems.
+\item a spreadsheet file with all the calculated energies.
+\item all the geometries used for the calculations.
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % BIBLIOGRAPHY
 
 \bibliography{biblio_pseudo_alex}   % Produces the bibliography via BibTeX.
-
-%\end{document}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\clearpage
-\section{Supplementary materials}
-\subsection{Details on the extraction process}
-\subsubsection{CH\(_{3}\), with \(s\) potentials}
-
-We aim first to reproduce the values for the CH\(^{\bullet}_{3}\) radical as given in Table \ref{table:ch3_s_potentials}. 
-This reference CH\(^{\bullet}_{3}\) is created and has its geometry optimised under Hartree-Fock (HF). The reference geometry gives a C - H distance of 2.0466 a.u., and so we pick \(d = 2.0\) a.u. as a starting guess for the planar distance from the pseudo-carbon, \(d\), of our pseudo-potentials. The pseudo-system is then set up, erasing the hydrogen atoms, setting the carbon charge \(Z_{nucleus} = 1\) and applying \(s\) pseudo-potentials, as well as selecting the correct orbital for the remaining electron. Table \ref{table:ch3_s_potentials} displays some of our results. Promisingly, we are able to produce many sets of potentials that give the correct energy.
-
-\subsubsection{Ethene, with \(s\) and \(p\) potentials}
-
-Next, we take some of these potentials to create a pseudo-ethene system, with the results shown in Table \ref{table:ethene_s_pseudo}. All potentials tested with \(d = 2.0\) a.u. gave results several orders of magnitude away from the reference value. From Figure \ref{fig:long_r_ethene} we may see the reason. One of the potential sets from each carbon is closer to the neighbouring carbon than the neighbour's own potential sets, thus both pseudo-carbons are affected by potentials which do not belong to them. At the shorter range \(d = 0.5\) a.u., the HOMO energy is of the right magnitude, though with errors of \(~ 30\%\). Attempts to eliminate this error lead us to the additional use of the \(p_{z}\) potential \textit{alongside} the \(s\) potentials.
-
-The next step adds a \(p\) potential centred on the pseudo-carbon, with Table \ref{table:p_potentials} displaying the results. As before, \(d = 0.5\) a.u.. The \(p_{z}\) potential is selected using the procedure described in Section \ref{section:potential_derivation}, with the exponent chosen to give the maximum possible overlap with the \(p_{z}\) orbital, and the matching \(Z_{eff}\) coefficient calculated from the exponent and overlap. The \(s\) potentials are then optimised once more to give the correct HOMO energy for CH\(^{\bullet}_{3}\). We again take these potentials to create a pseudo-ethene molecule, with the results shown in Table \ref{table:p_potentials}. We can see that these potentials seem to transfer more effectively from the CH\(^{\bullet}_{3}\) system to the ethene, suggesting therefore that whilst the \(s\) potentials can affect both the \(p_{z}\) and \(\pi\) orbitals, they 
-cannot alone describe the relationship between them.
-
-Having successfully created a pseudo-ethene with the correct HOMO, we attempt to have the pseudo-system replicate other properties of the real system:
-the singlet-triplet excitation energy ($\Delta_{ST}$) in the SCF framework (energy difference between the triplet and the singlet mono-reference
-calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\varepsilon_{HOMO}$). Reference values for the singlet-triplet \(\pi-\pi^{*}\) excitation and first ionisation energies of ethene are given in Table \ref{tab:res_ourPP}. Testing the relevant energies for the optimised pseudo-systems above, we found that the early results were not promising. However, after we abandon the notion of sticking strictly to a \(p_{z}\) potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" of potential coefficients and exponents around which the correct values begin to emerge. Tables \ref{tab:params} and  \ref{tab:res_ourPP} show our optimal result, chosen to give HOMO, ($\Delta_{ST}$) and ionisation energies closest to the reference values. 
-
-\subsubsection{Optimisation}
-
-In earlier calculations with only \(s\) potentials, optimisation was performed by choosing a range of exponent values and attempting to optimise the coefficient at each to produce the HOMO reference energy. Once the \(p_{z}\) potential was added, the \(s\) potentials were optimised afterward. 
-
-Once we started to look at excitation and ionisation energies however, optimisation became more complicated. Optimisations were at first performed of the $s$ and $p$ potentials to reach the HOMO energy of ethene as before. With the different potential variables available, we produced a range of optimised potential sets. The best set of these potentials was then chosen and the values altered by hand in order to match as closely as possible three separate reference values: the singlet HOMO energy, the singlet-triplet \(\pi-\pi^{*}\) excitation energy, and the cation-singlet energy. All optimisations used the Brent method in SciPy's optimisation library, with a tolerance of \(1.48*10^{-08}\), and used standard Hartree-Fock calculations.\cite{scipy}
-
-\subsection{Comparison with our previous study}
-\begin{figure}
-\begin{center}
-\includegraphics[width=8cm]{short_pbe0_tddft_2013}
-\includegraphics[width=8cm]{short_pbe0_tddft}
-\end{center}
-\caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
-\label{fig:alkenes_tddft}
-\end{figure}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% FIGURE CAPTIONS
-
-%%%%% FIGURE ---- cc.eps
-\begin{figure}
-\begin{center}
-%\includegraphics[width=0.2\columnwidth,keepaspectratio=true]{cc.eps}
-\fbox{\includegraphics[width=0.45\textwidth]{hires_long_r_crop.png}}%
-\fbox{\includegraphics[width=0.45\textwidth]{hires_short_r_crop.png}}
-\end{center}
-\caption{Diagrams of pseudo-ethene with \(d =\) 2.0 a.u. (left), and \(d = 0.5\) a.u. (right). The first pseudo-carbon is displayed in blue, with its \(s\) pseudo-potentials in cyan, and the second pseudo-carbon is in red, with its potentials in pink.}
-\label{fig:long_r_ethene}
-\end{figure}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\clearpage
-
-\begin{table}[ht]
-\begin{tabular}{c c c}
-\hline\hline
- & Coefficient & Exponent \\ 
-\hline
-HF & -2.594 & 1.0 \\
- & -4.788 & 5.0 \\
- & -7.524 & 10.0 \\
-\hline
-PBE0 & -2.605 & 1.0 \\
- & -4.873 & 5.0 \\
- & -7.678 & 10.0 \\
-\hline\hline
-\end{tabular}
-\caption{Coefficients and exponents for \(s\)-only pseudo-potentials for CH\(^{\bullet}_{3}\), optimised to give 
-the all-electron HOMO reference energy of  -10.537~eV (HF) and -6.726~eV (PBE0). 
-\(d = 0.5\) a.u., as defined in Figure~\ref{figure:ref_pseudo_diagram}.}
-\label{table:ch3_s_potentials}
-\end{table}
-
-\newpage
-
-\begin{table}[ht]
-\begin{tabular}{c c c c}
-\hline\hline
-& $d$ & \(s\) coefficient & \( \pi \)  \\
-\hline
-HF$^a$   &     &        & -10.363 \\
-PBE0$^a$ &     &        & -6.632 \\
-HF       & 2.0 & -7.521 & -9597.0 \\
-HF       & 0.5 & -7.521  & -7.905 \\
-PBE0     & 0.5 &-7.678  & -8.447 \\
-\hline\hline
-\multicolumn{4}{l}{$^a$ All-electron reference values.}\\
-\end{tabular}
-\caption{HOMO energies ($\pi$, eV) for ethene and pseudo-ethene. The pseudo-potentials used in the pseudo-ethene are taken from optimised values for 
-pseudo-CH\(^{\bullet}_{3}\) with only \(s\) potentials and an exponent of 10.0. $d$ (a.u.) as defined 
-in Figure~\ref{figure:ref_pseudo_diagram}.}
-\label{table:ethene_s_pseudo}
-\end{table}
-
-\newpage
-
-\begin{table}[ht]
-\begin{tabular}{c c c c}
-\hline\hline
-& \(p\) coefficient & \(p\) exponent \\
-\hline
-\(p_{z}\) potential & -3.267 & 0.295 \\
-\hline
-Calculation Type & \(s\) coefficient & \(s\) exponent & \(\pi\) \\
-\hline
-HF & 2.772 & 1.0 & -13.654 \\
- & 6.173 & 5.0 & -14.011 \\
- & 10.381 & 10.0 & -14.061 \\
-\hline
-PBE0 & 3.483 & 1.0 & -10.325 \\
- & 9.801 & 5.0 & -10.409 \\
- & 18.351 & 10.0 & -12.543 \\
-\hline\hline
-\end{tabular}
-\caption{\(\pi\) orbital energy values (eV) for pseudo-ethene, using \(s\) and \(p\) pseudo-potentials.
-The pseudo-potentials are taken from a pseudo-CH\(^{\bullet}_{3}\) system optimised to give the correct all-electron HOMO energy.}
-\label{table:p_potentials}
-\end{table}
-
-\subsection{Timings}
-The reduction of computational time necessary for calculations was not our primary aim, however the model that we develop in this work does allow significant gains.
-To illustrate this, we provide in Table \ref{tab:time} a small study done on the C$_{50}$H$_{52}$
-alkene chain.
-Calculations were performed with two different basis sets: def2-SV(P) and QZVPPD.
-When using the pseudo-potential, the basis set was truncated by removing all
-basis functions not necessary to reproduce the
-$\pi$ system.
-In other words, only $p$ functions or those of higher angular momentum were kept.
-As can be seen from Table \ref{tab:time}, the gain increases
-with the size of the basis set as expected.
-The gain ranges from 3 (def2-SV(P)) to 8 (QZVPPD).
-
-\begin{table}[ht]
-\begin{tabular}{lrr}
-\hline\hline
-Model            & def2-SV(P) & QZVPP \\
-\hline
-All electrons    &        67 & 68928 \\
-Pseudo-potential &        28 &  8566 \\
-\hline\hline
-\end{tabular}
-\caption{\label{tab:time}Time (in seconds) per SCF iteration.} 
-\end{table}
 
 \end{document}
 
