--- a/main.tex
+++ b/main.tex
@@ -629,7 +629,7 @@ TD-DFT $\pi-\pi^*$       & 13.5 &  3.6  &  2.7 &  6.3 &  7.0 \\
 
 \caption{Comparison of the HOMO ($\varepsilon_{HOMO}$),
 the ionisation (I.E.),
-the first singlet-triplet $\pi-\pi*$ excitation ($\Delta_{ST}$ and TD-DFT) energies
+the first singlet-triplet $\pi-\pi^*$ excitation ($\Delta_{ST}$ and TD-DFT) energies
 between the
 all electron reference system and the optimal pseudo-potential across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).
 The $\Delta_{ST}$ values are the difference
