--- a/main.tex
+++ b/main.tex
@@ -290,14 +290,14 @@ the $A'$ coefficient and $\alpha'$ exponent, which will be common to the six $s$
 }
 \begin{tabular}{ccc}
 \hline\hline
- x & y & z                                       \\
+ $x$ & $y$ & $z$                                       \\
 \hline
- $-d$                   & $0$            & $ c$ \\
- $-d$                   & $0$            & $-c$ \\
- $\frac{ d\sqrt{3}}{2}$  & $\frac{d}{2}$  & $ c$ \\
- $\frac{ d\sqrt{3}}{2}$  & $\frac{d}{2}$  & $-c$ \\
- $\frac{-d\sqrt{3}}{2}$ & $\frac{d}{2}$  & $ c$ \\
- $\frac{-d\sqrt{3}}{2}$ & $\frac{d}{2}$  & $-c$ \\
+$0$            & $-d$                   &  $ c$ \\
+$0$            & $-d$                   &  $-c$ \\
+$-\frac{d}{2}$ & $-\frac{d\sqrt{3}}{2}$ &  $ c$ \\
+$-\frac{d}{2}$ & $-\frac{d\sqrt{3}}{2}$ &  $-c$ \\
+$\frac{d}{2}$  & $-\frac{d\sqrt{3}}{2}$ &  $ c$ \\
+$\frac{d}{2}$  & $-\frac{d\sqrt{3}}{2}$ &  $-c$ \\
 \hline\hline
 \end{tabular}
 \end{table}
