--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -165,6 +165,7 @@ Model            & def2-SV(P) & QZVPP \\
 \hline
 All electrons    &        67 & 68928 \\
 Pseudo-potential &        28 &  8566 \\
+Gain             &       2.4 &   8.0 \\
 \hline\hline
 \end{tabular}
 \caption{\label{tab:time}Time (in seconds) per SCF iteration.} 
