change caption in SI

--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -165,10 +165,11 @@ Model            & def2-SV(P) & QZVPP \\
 \hline
 All electrons    &        67 & 68928 \\
 Pseudo-potential &        28 &  8566 \\
-Gain             &       2.4 &   8.0 \\
+Gain (no unit)   &       2.4 &   8.0 \\
 \hline\hline
 \end{tabular}
-\caption{\label{tab:time}Time (in seconds) per SCF iteration.} 
+\caption{\label{tab:time}Time (in seconds) per SCF iteration and relative
+gain (time ratio all-electron/pseudo-potential) for a standard and a large basis set.} 
 \end{table}
 
 \bibliography{biblio_pseudo_alex} 
