--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -161,7 +161,7 @@ The gain ranges from 2.4 (def2-SV(P)) to 8 (QZVPPD).
 \begin{table}[ht]
 \begin{tabular}{lrr}
 \hline\hline
-Model            & def2-SV(P) & QZVPP \\
+Model            & def2-SV(P) & QZVPPD \\
 \hline
 All electrons    &        67 & 68928 \\
 Pseudo-potential &        28 &  8566 \\
