--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,6 @@
 
 \usepackage{amsmath,amssymb}
 \usepackage{graphicx}% Include figure files
-%\usepackage{caption}
 \usepackage{color}% Include colors for document elements
 \usepackage{dcolumn}% Align table columns on decimal point
 \usepackage{bm}% bold math
@@ -18,7 +17,8 @@
 %\usepackage[nolists, nomarkers, figuresfirst]{endfloat}
 
 \definecolor{background-color}{gray}{0.98}
-\graphicspath{{data/}{images/}}
+\graphicspath{{./}{data/}{images/}}
+\listfiles
 
 \begin{document}
 
@@ -251,9 +251,9 @@ initial guess for the extraction of a pseudo-potential for a general $\pi$ carbo
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=8cm]{ch3.png}
-\includegraphics[width=8cm]{pseudoch3.png}
-\includegraphics[width=8cm]{tm_sp2_potentials.png}
+\includegraphics[width=8cm]{ch3_p}
+\includegraphics[width=8cm]{ch3_pseudo_p}
+\includegraphics[width=8cm]{tm_sp2_potentials}
 \end{center}
 \caption{Diagrams of CH\(^{\bullet}_{3}\) (left) and pseudo-CH\(^{\bullet}_{3}\)
 (right, below) molecules.
